Closed Bug 1395361 Opened 8 years ago Closed 8 years ago

Crash in mozilla::dom::CoalescedMouseMoveFlusher::StartObserver

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla57
Tracking Status
firefox-esr52 --- unaffected
firefox55 --- unaffected
firefox56 --- unaffected
firefox57 --- fixed

People

(Reporter: marcia, Assigned: stone)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-dfc9e576-bb37-495c-b1ab-e27570170827. ============================================================= Seen while looking at crash stats - crashes started using 20170826213134: http://bit.ly/2wjwYTf. 7 crashes/3 installs so far Code was touched in Bug 1361067. ni on stone
Flags: needinfo?(sshih)
Assignee: nobody → sshih
Flags: needinfo?(sshih)
This may be caused by accessing to mCoalescedMouseEventFlusher after TabChild::DestroyWindow. Add some checks and monitor if this still exists.
Attachment #8903047 - Flags: review?(bugs)
Attachment #8903047 - Flags: review?(bugs) → review+
Pushed by sshih@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/19078068a74b Avoid using mCoalescedMouseEventFlusher after it's destroyed. r=smaug.
Add leave-open and keep an eye on this to make sure it's resolved.
Keywords: leave-open
No reports since 8-31.
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Removing leave-open keyword from resolved bugs, per :sylvestre.
Keywords: leave-open
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: