Bug 1395361: Avoid using mCoalescedMouseEventFlusher after it's destroyed. r=smaug.

MozReview-Commit-ID: Fbu3zfERY0P